Changes to development environmeent guide for ubuntu